objects/APXTCFQ__Conga_Merge_Query__c.object
<CustomObject>
    <description>SOQL queries to be used with Conga Quote Generation.</description>
    <fields>
        <fullName>APXTCFQ__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APXTCFQ__Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Key</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>APXTCFQ__Name__c</fullName>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXTCFQ__Query__c</fullName>
        <label>SOQL Select Statement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Conga Quote Query</label>
    <listViews>
        <fullName>APXTCFQ__All</fullName>
        <columns>NAME</columns>
        <columns>APXTCFQ__Name__c</columns>
        <columns>APXTCFQ__Description__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CQQ-{0000}</displayFormat>
        <label>Conga Quote Query Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conga Quote Queries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>